--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: inline_pseudo
 description: Experimenting with Inline Pseudo-Class Styling.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
